# simd-strings

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  configure.ac  configure~  notes.txt  teddy.c
benchmark/: CMakeLists.txt  search_benchmarks.c  teddy_benchmark.c
benchmark/statistics/: CMakeLists.txt  statistics.c  statistics.h
benchmark/timer/: CMakeLists.txt  timer.c  timer.h
bindings/cpp/: CMakeLists.txt
bindings/cpp/include/simdstr/: search.hpp  simdstr.hpp
bindings/cpp/src/: CMakeLists.txt  search.cpp
bindings/python/: CMakeLists.txt  py_simd_strings.c  setup.py  simd_strings.c
include/simdstr/: fat_teddy.h  search.h  simdstr.h  slim_teddy.h  teddy.h  transform.h  types.h
include/simdstr/search/: search.h
include/simdstr/utils/: utils.h
src/: CMakeLists.txt  Makefile.am  Makefile.in  fat_teddy.c  search.c  simdstr.c  slim_teddy.c  teddy.c
src/search/: CMakeLists.txt  search.c
src/utils/: CMakeLists.txt  utils.c
test/: CMakeLists.txt  minunit.h  search.c  searchTest.c  simd_stristrTest.c  simd_strstrTest.c  slim_teddy_test.c  test.txt
